@@ -34,6 +34,8 @@ Release 0.20.3 - Unreleased
                an immediate region server shutdown (Sam Pullara via JD)
    HBASE-2078  Add JMX settings as commented out lines to hbase-env.sh
                (Lars George via JD)
+   HBASE-2082  TableInputFormat is ignoring input scan's stop row setting
+               (Scott Wang via Andrew Purtell)
 
   IMPROVEMENTS
    HBASE-1961  HBase EC2 scripts
